# miawk

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  wrangler.jsonc
.github/workflows/: platform-builds.yml  publish-release.yml
assets/icons/: icon.icns
scripts/: package-native.sh
src/: main.rs  theme.rs
src/backend/: accounts.rs  codex.rs  mod.rs  runtime.rs  settings.rs  swarm.rs
web/: index.html
